--- a/myweb.html
+++ b/myweb.html
@@ -2,11 +2,12 @@
 <html>
         <head>
            <meta charset="utf-8">
-           <meta name="keywords（关键词）" content="关键词">
-           <meta name="description(网页描述内容)" content="内容">
+           <meta name="keywords" content="关键词">
+           <meta name="description" content="内容">
            <title>标签</title>
            <link rel="stylesheet" type="text/css" href="css2.css">
         </head>
         <body>
+        	<h1>我的git测试</h1>
         </body>
 </html>
