understand how stage works

--- a/myweb.html
+++ b/myweb.html
@@ -8,6 +8,7 @@
            <link rel="stylesheet" type="text/css" href="css2.css">
         </head>
         <body>
+        	<div>我的测试div</div>
         	<h1>我的git测试</h1>
         	<p>我的测试段落</p>
         </body>
